Image position and container alignment fix

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 
 .navbar a {
@@ -61,53 +61,53 @@ body {
 /* <----/* navbar end *   / ----> */
 
 /* <----- hero section start ----> */
-.hero {
+.hero { 
     position: relative;
-}
-
-.left {
-    float: left;
-    margin-left: 300px;
-}
-
-.right {
-    float: right;
-    margin-right: 200px;
+    top: 7vh;
 }
 
 .img-container {
+    position: relative;
+    left: 1300px;
     height: 555px;
     width: 400px;
-    border: black solid 5px;
 }
 
+.img-container {
+    position: relative;
+    border: black solid 5px;  
+}
 
-.img-container img {
+.img {
     position: absolute;
-    right: 225px;
-    top: 20px;
+    right: 55px;
+    top: 30px;
     filter: drop-shadow(0 0 0.75rem black);
-    overflow: none;
 }
 
 .text-container {
+    position: relative;
+    bottom: 50%;
+    left: 11%;
     height: 10px;
-    width: auto;
-    position: absolute;
-    right: 65%;
     max-height: 3em;
-
+    max-width: 500px;
 }
 
 .text-container h1 {
-    font-size: 100px;
+    font-size: 95px;
     margin-bottom: 0%;
+    
+}
+
+.text-container p {
+font-weight: 200;
 }
 
 .front-end {
     font-weight: 700;
     background-image: linear-gradient(to right, #FF9F66, transparent);
-    padding: 2px;
+    padding: 5px;
 }
 
 .text-container p {
@@ -115,22 +115,27 @@ body {
 }
 
 .arrow {
-    position: absolute;
-    left: 600px;
-    transform: rotate(40deg);
+   position: absolute;
+   height: 60px;
+   left: 400px;
+   bottom: 20px;
+   rotate: 400deg;
 }
 
-.random-lines {
+.randomlinesnodisplay {
     position: relative;
-    height: 200px;
-    left: 30%;
-    top: 450px;
-    transform: rotate(10deg);
+    height: 230px;
+    rotate: 60deg;
+    left: 70px;
+    z-index: 99;
+    top: 30px;
 }
+
 
 /* <----- hero section end ----> */
 
 /* <----- introduction section start ----> */
+
 .introduction {
     height: auto;
     width: 100%;
@@ -141,7 +146,6 @@ body {
     display: flex;
     justify-content: center;
     padding: 30px;
-
 }
 
 .introduction img {
@@ -322,3 +326,9 @@ button {
 }
 
 /* <----- footer section end ----> */
+
+/* <----- media section start ----> */
+
+@media (max-width: ) {
+
+}
